--- a/Text based game/Text.html
+++ b/Text based game/Text.html
@@ -3,10 +3,43 @@
       <title>
          Text based Game
       </title>
+      <style>
+  #menu a{
+            text-decoration:none;
+            color: White;
+        }
+        #menu li{
+	       Display:inline;
+	       text-decoration:none;
+	       color:Whit;
+	       padding:20px;
+	       width:550px;
+	       border-style:solid;
+	       background-image:url("http://www.gifmania.us/Animated-Gifs-Technology/Free-Animations-Electricity/Electric-Current-83644.gif");
+           background-size:100px
+	  }
+	  </style>
+	  <h1>
+	     Mini Game
+	  </h1>
+	  <div id="menu">
+    <ul>
+        <li><a href="../Welcome Page/Welcome.html"><strong>Welcome</strong></a></li>
+        <li><a href="../About me page/aboutme.html"><strong>About Me</strong></a></li>
+        <li><a href="../Coding Page/coding.html"><strong>Coding</strong></a></li>
+        <li><a href="../Hardware Page/Hardware.html"><strong>Hardware</strong></a></li>
+        <li><a href="../Calculator/calc.html"><strong>Calculator</strong></a></li>
+        <li><a href="../Info Page/info.html"><strong>Info</strong></a></li>
+        <li><a href="../To do List/todolist.html"><strong>To Do List</strong></a></li>
+        <li><a href="../Text based game/Text.html"><strong>Game</strong></a></li>
+        <li><a href="../Vindinium/Vindinium.html"><strong>Vindinium</strong></a></li>
+    </ul>
+  </div>
     <div id="startTxt" style="text-align:center">
    <h1>
       Can you Save Them?
    </h1>
+   
    <p>
       You were in a car accident and you managed to get out,
       but your friend did not, you have about 2 minutes to 
