--- a/Welcome Page/Welcome.html
+++ b/Welcome Page/Welcome.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+ <!--
+To change this template use Tools | Templates.
+-->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="index.css">
-	<title>Document</title>
+    <title></title>
 </head>
-<style>
-#menu a{
+    <style>
+  #menu a{
             text-decoration:none;
             color: White;
         }
@@ -19,20 +21,32 @@
 	       background-image:url("http://www.gifmania.us/Animated-Gifs-Technology/Free-Animations-Electricity/Electric-Current-83644.gif");
            background-size:100px
 	  }
-        #menu{
+          div{
+	      text-align: center;
+          }
+        body{
+            background-image:url("https://media0.giphy.com/media/dzaUX7CAG0Ihi/200_s.gif");
+            background-size:1400px
+        }
+        p{
+            color:Black;
             text-align:center;
+            font-size:30px;
+            border-style:solid;
+	         border-color:black;
+	         background-color:white;
         }
         h1{
-            text-align:center;
-            color:white;
+           text-align:center;
+           color:White;
         }
-</style>
-<h1>
-    Calculator
-</h1>
+    </style>
+    <h1>
+       WELCOME!
+    </h1>
     <div id="menu">
-        <ul>
-            <li><a href="../Welcome Page/Welcome.html"><strong>Welcome</strong></a></li>
+    <ul>
+      <li><a href="../Welcome Page/Welcome.html"><strong>Welcome</strong></a></li>
         <li><a href="../About me page/aboutme.html"><strong>About Me</strong></a></li>
         <li><a href="../Coding Page/coding.html"><strong>Coding</strong></a></li>
         <li><a href="../Hardware Page/Hardware.html"><strong>Hardware</strong></a></li>
@@ -41,22 +55,9 @@
         <li><a href="../To do List/todolist.html"><strong>To Do List</strong></a></li>
         <li><a href="../Text based game/Text.html"><strong>Game</strong></a></li>
         <li><a href="../Vindinium/Vindinium.html"><strong>Vindinium</strong></a></li>
-        </ul>
-    </div>
-<body style="background-image:url(http://images2.alphacoders.com/969/96952.jpg); background-size:1400px;">
-    
-<input type ="text" name="input1" style="width:50px;" id="input1">
-    <select id="dropdown">
-        <option value="+">+</option>
-        <option value="-">-</option>
-        <option value="x">x</option>
-        <option value="/">/</option>
-    </select>
-    <input type ="text" name="input2" style="width:50px;" id="input2">
-    <input type="button" value="Calculate" id="submitButton" />
-
-    <p style="color:white;">The answer is: <span id="display"></span></p>
-<script src="calc.js" ></script>
-
+    </ul>
+  </div>
+    <body>
+       <p> Hey how are you, My names Richard and this is my website,<br> I personally have coded this website so feel free to browse <br>around and check the other websites.</p> 
 </body>
 </html>
