--- a/Welcome.html
+++ b/Welcome.html
@@ -25,32 +25,36 @@ To change this template use Tools | Templates.
 	      text-align: center;
           }
         body{
-            background-color:Black;
+            background-image:url("https://media0.giphy.com/media/dzaUX7CAG0Ihi/200_s.gif");
+            background-size:1400px
         }
         p{
             color:White;
             text-align:center;
             font-size:20px;
         }
+        h1{
+           text-align:center;
+           color:White;
+        }
     </style>
+    <h1>
+       WELCOME!
+    </h1>
     <div id="menu">
     <ul>
-      <li><a href="Welcome.html"><strong>WELCOME</strong></a></li>
-        <li><a href="aboutme.html"><strong>ABOUT ME</strong></a></li>
-        <li><a href="coding.html"><strong>CODING lANGUAGES</strong></a></li>
-        <li><a href="Hardware.html"><strong>HARDWARE</strong></a></li>
-<<<<<<< HEAD
-        <li><a href="calc.html"><strong>CALCULATOR</strong></a></li>
-        <li><a href="info.html"><strong>INFO</strong></a></li>
-        <li><a href="todolist.html"><strong>TO DO LIST</strong></a></li>
-=======
->>>>>>> 65a731fcf8cb4318f79028505695ab5f697f2c7c
+      <li><a href="Welcome.html"><strong>Welcome</strong></a></li>
+        <li><a href="aboutme.html"><strong>About Me</strong></a></li>
+        <li><a href="coding.html"><strong>Coding</strong></a></li>
+        <li><a href="Hardware.html"><strong>Hardware</strong></a></li>
+        <li><a href="calc.html"><strong>Calculator</strong></a></li>
+        <li><a href="info.html"><strong>Info</strong></a></li>
+        <li><a href="todolist.html"><strong>To Do List</strong></a></li>
+        <li><a href="Text.html"><strong>Game</strong></a></li>
+        <li><a href="Vindinium.html"><strong>Vindinium</strong></a></li>
     </ul>
   </div>
     <body>
-        <div>
-            <img src="http://www.picgifs.com/graphics/w/welcome/graphics-welcome-497315.gif">
-        </div>
        <p> Hey how are you, My names Richard and this is my website,<br> I personally have coded this website so feel free to browse <br>around and check the other websites.</p> 
 </body>
 </html>
