--- a/To do List/todolist.html
+++ b/To do List/todolist.html
@@ -26,13 +26,15 @@
   <section>
     <div id="menu">
     <ul>
-      <li><a href="Welcome.html"><strong>WELCOME</strong></a></li>
-        <li><a href="aboutme.html"><strong>ABOUT ME</strong></a></li>
-        <li><a href="coding.html"><strong>CODING lANGUAGES</strong></a></li>
-        <li><a href="Hardware.html"><strong>HARDWARE</strong></a></li>
-        <li><a href="calc.html"><strong>CALCULATOR</strong></a></li>
-        <li><a href="info.html"><strong>INFO</strong></a></li>
-        <li><a href="todolist.html"><strong>TO DO LIST</strong></a></li>
+      <li><a href="../Welcome Page/Welcome.html"><strong>Welcome</strong></a></li>
+        <li><a href="../About me page/aboutme.html"><strong>About Me</strong></a></li>
+        <li><a href="../Coding Page/coding.html"><strong>Coding</strong></a></li>
+        <li><a href="../Hardware Page/Hardware.html"><strong>Hardware</strong></a></li>
+        <li><a href="../Calculator/calc.html"><strong>Calculator</strong></a></li>
+        <li><a href="../Info Page/info.html"><strong>Info</strong></a></li>
+        <li><a href="../To do List/todolist.html"><strong>To Do List</strong></a></li>
+        <li><a href="../Text based game/Text.html"><strong>Game</strong></a></li>
+        <li><a href="../Vindinium/Vindinium.html"><strong>Vindinium</strong></a></li>
     </ul>
   </div>
     <div id="todolist"></div>
